# task_test

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
test_task/: settings.py  urls.py
